<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/logo_description"
        app:srcCompat="@drawable/sunmoon_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <TextView
                android:id="@+id/label_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:width="50dp"
                android:height="40dp"
                android:gravity="center"
                android:text="@string/text_email"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:height="40dp"
                android:autofillHints="Enter Your ID"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:labelFor="@id/label_id"
                android:text=""
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <TextView
                android:id="@+id/label_pw"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:width="50dp"
                android:height="40dp"
                android:gravity="center"
                android:text="@string/text_pw"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_pw"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:height="40dp"
                android:autofillHints="Enter Your Password"
                android:ems="10"
                android:inputType="textPassword"
                android:labelFor="@id/label_pw"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="login"
                android:text="@string/text_login" />

            <Button
                android:id="@+id/btn_join"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="join"
                android:text="@string/text_join" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>